# bond_chart_optimization

./: build.py  main.py  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py
app/backend/: admin.py  api.py  bond_exp.py  chart_solver.py  github_sync.py  presets.py  student.py  user_presets.py
app/frontend/: callbacks.py  layout.py
assets/: save_image.js  solver.js  style.css
data/: db_dump.json  presets.json  user_presets.json
docs/: manual.md  sidney_algorithm.md
scripts/: manage_prod_db.py  promote_preset.py
tests/: test_chart_solver.py  test_layout.py
